--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="">
     <script src="https://kit.fontawesome.com/7dcc66eb72.js" crossorigin="anonymous"></script>
     <title>Santorini Tourism | welcome </title>
     <style>
