--- a/food.html
+++ b/food.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
        
         <title>Santorini Tourism | foods </title>
-        <link rel="stylesheet" href="./css/food.css">
+        <link rel="stylesheet" href="food.css">
     </head>
     <body>
     
