--- a/festival.html
+++ b/festival.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Santorini Tourism | festival</title>
    
-    <link rel="stylesheet" href="./css/festival.css">
+    <link rel="stylesheet" href="festival.css">
 
 </head>
 <body>
