--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
     <title>Santorini Tourism | about </title>
-    <link rel="stylesheet" href="./css/info.css">
+    <link rel="stylesheet" href="info.css">
 </head>
 <body>
 
