--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="contact.css">
     <script src="https://kit.fontawesome.com/7dcc66eb72.js" crossorigin="anonymous"></script>
     <title>Santorini Tourism | contact </title>
 </head>
