--- a/food.html
+++ b/food.html
@@ -36,7 +36,7 @@
     <!-- first box -->
                 <div class="row row1">
                     <div class="img-box">
-                        <img src="./images/khaman.webp" alt="">
+                        <img src="khaman.webp" alt="">
                     </div> 
                 <div class="text-box">
                         <h2 class="mh text-gray">Khaman</h2><br>
@@ -47,7 +47,7 @@
      <!-- second box -->
                 <div class="row row2">
                     <div class="img-box">
-                        <img src="./images/fafda.webp" alt="">
+                        <img src="fafda.webp" alt="">
                     </div>
                     <div class="text-box">
                         <h2 class="mh text-gray">Fafda</h2><br>
@@ -59,7 +59,7 @@
      <!-- third box -->
                 <div class="row row1">
                     <div class="img-box">
-                        <img src="./images/BHAJIYA.WEBP" alt="">
+                        <img src="BHAJIYA.WEBP" alt="">
                     </div>
                     <div class="text-box">
                         <h2 class="mh text-gray">The Gujarati Pakoras!</h2>
@@ -72,7 +72,7 @@
              
                <div class="row row2">
                     <div class="img-box">
-                        <img src="./images/Thepla.webp" alt="">
+                        <img src="Thepla.webp" alt="">
                     </div>
                     <div class="text-box">
                         <h2 class="mh text-gray">Thepla</h2>
