--- a/festival.html
+++ b/festival.html
@@ -47,7 +47,7 @@
 <!-- first box -->
             <div class="row row1">
                 <div class="img-box">
-                    <img src="./images/White Rann .jpg" alt="" >
+                    <img src="White Rann .jpg" alt="" >
                 </div> 
             <div class="text-box">
                     <br><h2 class="name text-gray">Rann Utsav</h2><br>
@@ -62,7 +62,7 @@
 
             <div class="row row2">
                 <div class="img-box1">
-                    <img src="./images/kite-festival.jpg" alt="" >
+                    <img src="kite-festival.jpg" alt="" >
                 </div> 
             <div class="text-box">
                     <br><h2 class="name text-gray">International Kite Festival</h2><br>
