--- a/info.html
+++ b/info.html
@@ -35,7 +35,7 @@
 <!-- first box -->
             <div class="row row1">
                 <div class="img-box">
-                    <img src="./images/SOU.jpg" alt="">
+                    <img src="SOU.jpg" alt="">
                 </div> 
             <div class="text-box">
                     <h2 class="mh text-gray">Statue of Unity</h2><br>
@@ -46,7 +46,7 @@
  <!-- second box -->
             <div class="row row2">
                 <div class="img-box">
-                    <img src="./images/m.jpg" alt="">
+                    <img src="m.jpg" alt="">
                 </div>
                 <div class="text-box">
                     <h2 class="mh text-gray">Somnath temple</h2><br>
@@ -58,7 +58,7 @@
  <!-- third box -->
             <div class="row row3">
                 <div class="img-box">
-                    <img src="./images/lion.jpg" alt="">
+                    <img src="lion.jpg" alt="">
                 </div>
                 <div class="text-box">
                     <h2 class="mh text-gray">Gir National Park</h2>
@@ -71,7 +71,7 @@
            <br><br><br><br><br><br><br> 
            <div class="row row2">
                 <div class="img-box">
-                    <img src="./images/ranivav.jpg" alt="">
+                    <img src="ranivav.jpg" alt="">
                 </div>
                 <div class="text-box">
                     <h2 class="mh text-gray">Rani ki Vav</h2>
@@ -82,7 +82,7 @@
 
             <div class="row row3">
                 <div class="img-box">
-                    <img src="./images/bet_night.jpeg.jpg" alt="">
+                    <img src="bet_night.jpeg.jpg" alt="">
                 </div>
                 <div class="text-box">
                     <h2 class="mh text-gray">Bet dwarka</h2>
